tests/const_param_grouped_name_bad.stderr
tests/const_param_grouped_name_bad.hop:2:17: error: HOP1019: grouped-name form is invalid for const parameter; rewrite as separate const parameters
