tests/const_param_grouped_name_bad.hop
// Verifies const parameter grouped name is rejected.
fn bad(const a, b i32) {
}
